[gd_scene load_steps=5 format=2]

[ext_resource path="res://pong.gd" type="Script" id=1]
[ext_resource path="res://separator.png" type="Texture" id=2]
[ext_resource path="res://paddle.tscn" type="PackedScene" id=3]
[ext_resource path="res://ball.tscn" type="PackedScene" id=4]

[node name="pong" type="Node2D"]

script = ExtResource( 1 )

[node name="separator" type="Sprite" parent="."]

position = Vector2( 512.309, 298.233 )
scale = Vector2( 1.04883, 1.4884 )
texture = ExtResource( 2 )

[node name="player1" parent="." instance=ExtResource( 3 )]

position = Vector2( 19.9447, 267.036 )

[node name="sprite" parent="player1"]

modulate = Color( 1, 0, 0.960938, 1 )

[node name="player2" parent="." instance=ExtResource( 3 )]

position = Vector2( 995.015, 244.876 )

[node name="sprite" parent="player2"]

modulate = Color( 0, 0.929688, 1, 1 )

[node name="ball" parent="." instance=ExtResource( 4 )]

position = Vector2( 513.02, 248.2 )

[node name="score_left" type="Label" parent="."]

margin_left = 96.0
margin_top = 57.0
margin_right = 104.0
margin_bottom = 71.0
rect_clip_content = false
mouse_filter = 2
size_flags_vertical = 0
text = "0"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="score_right" type="Label" parent="."]

margin_left = 907.0
margin_top = 62.0
margin_right = 915.0
margin_bottom = 76.0
rect_clip_content = false
mouse_filter = 2
size_flags_vertical = 0
text = "0"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="winner_left" type="Label" parent="."]

margin_left = 60.0
margin_top = 33.0
margin_right = 137.0
margin_bottom = 47.0
rect_clip_content = false
mouse_filter = 2
size_flags_vertical = 0
text = "The Winner!"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="winner_right" type="Label" parent="."]

margin_left = 872.0
margin_top = 41.0
margin_right = 949.0
margin_bottom = 55.0
rect_clip_content = false
mouse_filter = 2
size_flags_vertical = 0
text = "The Winner!"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="exit_game" type="Button" parent="."]

margin_left = 412.0
margin_top = 20.0
margin_right = 489.0
margin_bottom = 40.0
rect_clip_content = false
mouse_filter = 0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Exit Game"
flat = false

[connection signal="pressed" from="exit_game" to="." method="_on_exit_game_pressed"]


[editable path="player1"]
[editable path="player2"]
